fix etext title overlapping 'open' button

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1509,6 +1509,7 @@ h4:hover a.no-bdrc img { opacity:1; }
 .resource .data + .data { padding-top:1px; }
 .resource .title + .data + .data { padding-bottom:60px; }
 
+.resource .data.etext-title { padding-right:270px; }
 .resource .data h2.intro,
 .resource .data h2.intro + h2 span,
 .resource .title + .data + .data h2.on .T + span { font-size:30px; font-family:'Noto Sans SemCond';font-weight:bold; }
